fix: hidden overflow text

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   background-color: #34373f;
   color: #b1b3c5;
   line-height: 60px;
+  overflow: hidden;
 }
 
 .nameInput {
